# restaurant-ordering-system

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/backend/: .env.example  __main__.py
backend/backend/config/: constants.py  settings.py
backend/backend/models/: CompletedOrder.py  Order.py
backend/backend/mqtt/: client.py  handler.py
backend/backend/services/: order.py
backend/tests/: conftest.py  test_mqtt_handler.py  test_order_service.py
frontend/: .env.example  biome.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/cypress/e2e/: order.cy.ts
frontend/src/lib/: constants.ts
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/dialog/: dialog-content.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/sonner/: sonner.svelte
frontend/src/lib/repositories/: mqtt.ts
frontend/src/lib/stores/: orders.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  FoodOrderDIalog.svelte  Order.svelte  TableCard.svelte
