[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Feng",email = "efa34@sfu.ca"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["aiomqtt (>=2.0.0,<3.0.0)", "pydantic-settings (>=2.11.0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
